HOC blurr effect fixed , contact form on moble fixed

--- a/client/src/styles/Global/_Global.scss
+++ b/client/src/styles/Global/_Global.scss
@@ -4,7 +4,7 @@ body {
   font-family: "Roboto", sans-serif;
 }
 .Blur {
-  position: fixed;
+  position: absolute;
   left: 0;
   right: 0;
   bottom: 0;
@@ -40,11 +40,19 @@ section {
 @keyframes blurEffect {
   0% {
     opacity: 0;
-    filter: blur(2px);
+    filter: blur(3px);
+  }
+  30% {
+    opacity: 0.1;
+    filter: blur(2.5px);
   }
   60% {
     opacity: 0.3;
     filter: blur(1.5px);
+  }
+  66% {
+    opacity: 0.5;
+    filter: blur(1.1px);
   }
   80% {
     opacity: 0.7;
